--- a/resources/assets/styles/tools/_tools.bootstrap.scss
+++ b/resources/assets/styles/tools/_tools.bootstrap.scss
@@ -12,7 +12,8 @@
 // Define the minimum dimensions at which your layout will change,
 // adapting to different screen sizes, for use in media queries.
 $grid-breakpoints: (
-  xs: 0,
+  xxs: 0,
+  xs: 375px,
   sm: 576px,
   md: 768px,
   lg: 992px,
